load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "cxxopts",
    hdrs = ["include/cxxopts.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_fuzz_test(
    name = "cxxopts_fuzz_test",
    srcs = ["test/fuzz.cpp"],
    deps = [":cxxopts"],
)